# Reproduced_UAF

./: .gitmodules.save  a.out  httrack_linked.ll  parallel.cpp  pthreads_multiple_joins.cpp
Analysis_design/: a.out  test1.cpp  test2.cpp
AsaN_failures/: Nested_thread_call_2_bug_UAS_SF.cpp  relay_bug.cpp  t1_spawns_t2.cpp  t1_t2_independent.cpp
Object_patterns/: a.out  global_thread_handle.cpp  handle_on_heap.cpp  handle_pass_by_ref.cpp  handle_pass_by_value.cpp  handle_with_lambdas.cpp  heap_param.cpp  stack_param_by_val.cpp  static_param.cpp
Real_world_bugs/: Folly.cpp  Program1_without_bug.cpp  a.out
Real_world_linked_ll/: pping_whole.ll
SVF_PAPER_BENCHMARKS/bodytrack/src/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  configure~
SVF_PAPER_BENCHMARKS/bodytrack/src/FlexImageLib/: Makefile.in
SVF_PAPER_BENCHMARKS/bodytrack/src/TrackingBenchmark/: Makefile.in  TrackingModelPthread.cpp  TrackingModelPthread.h
SVF_PAPER_BENCHMARKS/bodytrack/src/TrackingBenchmark/threads/: Condition.cpp  Condition.h  Makefile.in  Mutex.cpp  Mutex.h  RWLock.cpp  RWLock.h  WorkerGroup.h
SVF_PAPER_BENCHMARKS/bodytrack/src/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.2  traces.3
Synthetic_bugs/: a.out
Thread_creation_Patterns/: Program10.cpp  Program2.cpp  Program2.ll  Program4.cpp  Program8.cpp  a.out  program3.cpp  program5.cpp
UAF_examples/: Folly.cpp  Program1_bug.cpp  Program1_without_bug.cpp  Program2_local.cpp  Program2_shared_ptr.cpp  Program3.cpp  Program3_bug.cpp  Program4.cpp  Program4_without_bug.cpp  (+9 more)
(+1007 files in other folders)
